[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klozeo"
version = "0.1.1"
description = "Official Python SDK for the Klozeo Lead Management API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Klozeo", email = "hello@klozeo.com" }]
keywords = ["klozeo", "leads", "crm", "sdk", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://klozeo.com"
Documentation = "https://docs.klozeo.com"
Repository = "https://github.com/lbframe/klozeo-sdk-python"
"Bug Tracker" = "https://github.com/lbframe/klozeo-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["klozeo"]
